--- a/DeliveryPage.html
+++ b/DeliveryPage.html
@@ -13,6 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="JavaScript/functions.js" async></script>
 </head>
 <body>
 
@@ -70,11 +71,9 @@
                 </fieldset>
 
                 <br>
-                <button class="btn info" id="back-btn">Proceed Payment</button>
+                <button onclick="goBack()" class="btn info" id="back-btn">Proceed Payment</button>
                 <br>
                 <button class="btn warning" id="payment-btn">Back</button>
-
-
             </form>
         </div>
     </div>
