--- a/Products.html
+++ b/Products.html
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <script src="JavaScript/products.js" async></script>
+    <script src="JavaScript/functions.js" async></script>
 
 </head>
 <body style="background-color: white">
@@ -58,7 +58,7 @@
                     <div class="col-md-6 col-lg-4 col-xl-3 ">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/rice.jpg" alt="">
+                                <img class="card-img" src="images/rice.jpg" alt="" onclick="window.location.href='RiceProductPage.html'">
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
