--- a/MyAccountPage.html
+++ b/MyAccountPage.html
@@ -13,6 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="JavaScript/functions.js" async></script>
 
     <title>Login</title>
 </head>
@@ -20,7 +21,7 @@
 <div data-role="page" id="pageone">
     <div align="center" class="header">
         <a href="HomePage.html">
-            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60">
+            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" style="text-align: center">
         </a>
     </div>
 
@@ -36,7 +37,7 @@
         <input id="imageUpload" type="file"
                name="profile_photo" placeholder="Photo" required="" capture>
         <h3>H D S M Perera</h3>
-        <form method="post" action="demoform.asp" id="form">
+        <form method="post" action="demoform.asp" id="form" style="text-align: center">
 
             <label for="name" id="namelabel">Name</label>
             <input type="text" name="name" id="name" placeholder="Username" value="H.D.S.M Perera">
@@ -49,7 +50,8 @@
             <label for="phoneNo" id="numberlabel">Contact Number</label>
             <input type="number" name="phoneNo" id="phoneNo" placeholder="Telephone number" value="0771234567">
             <button class="btn warning" id="update-btn">Update</button>
-            <button class="btn info" id="back-btn">Back</button>
+            <br>
+            <button onclick="goBack()" class="btn info" id="back-btn" >Back</button>
 
 
         </form>
@@ -60,17 +62,17 @@
     <div data-role="footer" style="text-align:center;" data-position="fixed">
         <div data-role="navbar" id="bottom_nav">
             <ul>
-                <li>
-                    <i id="qrcode_icon" class="fas fa-qrcode"></i>
+                <li id="qrcode_icon" style="width:20%">
+                    <i class="fas fa-qrcode"></i>
                 </li>
                 <li id="cart_icon" style="width:20% ">
-                    <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-shopping-cart" onclick="window.location.href='CartPage.html'"></i>
                 </li>
                 <li id="home_icon" style="width:20%">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
                     <i class="fas fa-ellipsis-v"></i>
@@ -80,21 +82,6 @@
         </div>
     </div>
 </div>
-<script>
-    $("#profileImage").click(function (e) {
-        $("#imageUpload").click();
-    });
 
-    function fasterPreview(uploader) {
-        if (uploader.files && uploader.files[0]) {
-            $('#profileImage').attr('src',
-                window.URL.createObjectURL(uploader.files[0]));
-        }
-    }
-
-    $("#imageUpload").change(function () {
-        fasterPreview(this);
-    });
-</script>
 </body>
 </html>
