Cart Page Functionality

--- a/Products.html
+++ b/Products.html
@@ -39,9 +39,6 @@
                         <input id="myFilter" data-type="search" placeholder="Search for items..">
                     </form>
                 </li>
-                <!--                <li id="filter_icon" style="width:15%">-->
-                <!--                    <i class="fas fa-filter"></i>-->
-                <!--                </li>-->
             </ul>
         </div>
     </div>
@@ -66,10 +63,11 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5>Daawat Basmati Rice</h5>
+                                <h5 class="product-title">Daawat Basmati Rice</h5>
                                 <p class = "promo-item-text"><b>LKR 500.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn1">Add to Cart</button>
+                                <p class="product-qty">  1 </p>
+                                <button class="btn warning shop-item-button" id="cart-btn1">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -84,10 +82,11 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5>Anchor Milk 5kg</h5>
+                                <h5 class="product-title">Anchor Milk 5kg</h5>
                                 <p class = "item-text"><b>LKR 600.00</b></p>
                                 <p class ="promo-off">Best Price</p>
-                                <button class="btn warning" id="cart-btn2">Add to Cart</button>
+                                <p class="product-qty">  1 </p>
+                                <button class="btn warning shop-item-button" id="cart-btn2">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -102,10 +101,11 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5>Magee Noodles 200g</h5>
+                                <h5 class="product-title">Magee Noodles 200g</h5>
                                 <p class = "promo-item-text"><b>LKR 100.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn3">Add to Cart</button>
+                                <p class="product-qty">  2 </p>
+                                <button class="btn warning shop-item-button" id="cart-btn3">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -120,10 +120,11 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5>Pringles 300g</h5>
+                                <h5 class="product-title">Pringles 300g</h5>
                                 <p class = "item-text"><b>LKR 600.00</b></p>
                                 <p class ="promo-off">Best Price</p>
-                                <button class="btn warning" id="cart-btn4">Add to Cart</button>
+                                <p class="product-qty">  4 </p>
+                                <button class="btn warning shop-item-button" id="cart-btn4">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -138,10 +139,11 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5>Sugar 500g</h5>
+                                <h5 class="product-title">Sugar 500g</h5>
                                 <p class = "item-text"><b>LKR 150.00</b></p>
                                 <p class ="promo-off">Best Price</p>
-                                <button class="btn warning" id="cart-btn5">Add to Cart</button>
+                                <p class="product-qty">  3 </p>
+                                <button class="btn warning shop-item-button" id="cart-btn5">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -159,7 +161,8 @@
                                 <h5>Heinz Ketchup 500ml</h5>
                                 <p class = "promo-item-text"><b>LKR 800.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn6">Add to Cart</button>
+                                <p class="product-qty">  1 </p>
+                                <button class="btn warning shop-item-button" id="cart-btn6">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -174,10 +177,11 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5>Chilly 71g</h5>
+                                <h5 class="product-title">Chilly 71g</h5>
                                 <p class = "promo-item-text"><b>LKR 70.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn7">Add to Cart</button>
+                                <p class="product-qty">  1 </p>
+                                <button class="btn warning shop-item-button" id="cart-btn7">Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -192,10 +196,11 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5>KitKat 200g</h5>
+                                <h5 class="product-title">KitKat 200g</h5>
                                 <p class = "promo-item-text"><b>LKR 300.00</b></p>
                                 <p class ="promo-off">10% Off</p>
-                                <button class="btn warning" id="cart-btn8">Add to Cart</button>
+                                <p class="product-qty"> 2 </p>
+                                <button class="btn warning shop-item-button" id="cart-btn8">Add to Cart</button>
                             </div>
                         </div>
                     </div>
