--- a/CartPage.html
+++ b/CartPage.html
@@ -13,6 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="JavaScript/products.js" async></script>
 </head>
 <body>
 
@@ -34,9 +35,6 @@
                         <input id="myFilter" data-type="search" placeholder="Search for items..">
                     </form>
                 </li>
-<!--                <li id="filter_icon" style="width:15%">-->
-<!--                    <i class="fas fa-filter"></i>-->
-<!--                </li>-->
             </ul>
         </div>
     </div>
@@ -45,6 +43,7 @@
     <div data-role="main" class="ui-content">
         <p id="cart-title"><b>Shopping Cart</b></p>
 
+        <div class="cart-items">
         <div class="card c1">
             <table>
                 <col width="80">
@@ -69,54 +68,55 @@
             </table>
         </div>
 
-        <div class="card c2">
-            <table>
-                <col width="80">
-                <col width="80">
-                <col width="80">
-                <tr>
-                    <td class="product-image-td">
-                        <img class="img" src="images/kitkat.jpg" alt="KitKat" style="width:100%">
-                    </td>
-                    <td class="product-data-td">
-                        <p class="product-title"><b>KitKat </b></p>
-                        <p class="product-price">LKR 600</p>
-                        <!--<p id="product-desc"><b>400g </b></p>-->
-                    </td>
+        <!--<div class="card c2">-->
+            <!--<table>-->
+                <!--<col width="80">-->
+                <!--<col width="80">-->
+                <!--<col width="80">-->
+                <!--<tr>-->
+                    <!--<td class="product-image-td">-->
+                        <!--<img class="img" src="images/kitkat.jpg" alt="KitKat" style="width:100%">-->
+                    <!--</td>-->
+                    <!--<td class="product-data-td">-->
+                        <!--<p class="product-title"><b>KitKat </b></p>-->
+                        <!--<p class="product-price">LKR 600</p>-->
+                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
+                    <!--</td>-->
 
-                    <td class="product-extra-td">
-                        <i class="fa fa-trash del" id="deletebtn2"></i>
-                        <p class="product-qty"> Quantity: 2 </p>
-                    </td>
-                    </td>
-                </tr>
-            </table>
-        </div>
+                    <!--<td class="product-extra-td">-->
+                        <!--<i class="fa fa-trash del" id="deletebtn2"></i>-->
+                        <!--<p class="product-qty"> Quantity: 2 </p>-->
+                    <!--</td>-->
+                    <!--</td>-->
+                <!--</tr>-->
+            <!--</table>-->
+        <!--</div>-->
 
-        <div class="card c3">
-            <table>
-                <col width="80">
-                <col width="80">
-                <col width="80">
-                <tr>
-                    <td class="product-image-td">
-                        <img class="img" src="images/milk.jpeg" alt="Milk" style="width:100%">
-                    </td>
-                    <td class="product-data-td">
-                        <p class="product-title"><b>Milk </b></p>
-                        <p class="product-price">LKR 800</p>
-                        <!--<p id="product-desc"><b>400g </b></p>-->
-                    </td>
+        <!--<div class="card c3">-->
+            <!--<table>-->
+                <!--<col width="80">-->
+                <!--<col width="80">-->
+                <!--<col width="80">-->
+                <!--<tr>-->
+                    <!--<td class="product-image-td">-->
+                        <!--<img class="img" src="images/milk.jpeg" alt="Milk" style="width:100%">-->
+                    <!--</td>-->
+                    <!--<td class="product-data-td">-->
+                        <!--<p class="product-title"><b>Milk </b></p>-->
+                        <!--<p class="product-price">LKR 800</p>-->
+                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
+                    <!--</td>-->
 
-                    <td class="product-extra-td">
-                        <i class="fa fa-trash del" id="deletebtn3"></i>
-                        <p class="product-qty"> Quantity: 4 </p>
+                    <!--<td class="product-extra-td">-->
+                        <!--<i class="fa fa-trash del" id="deletebtn3"></i>-->
+                        <!--<p class="product-qty"> Quantity: 4 </p>-->
 
-                    </td>
-                    </td>
-                </tr>
-            </table>
+                    <!--</td>-->
+                    <!--</td>-->
+                <!--</tr>-->
+            <!--</table>-->
 
+        <!--</div>-->
         </div>
 
         <div>
