--- a/RiceProductPage.html
+++ b/RiceProductPage.html
@@ -13,15 +13,35 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="JavaScript/functions.js" async></script>
 </head>
 <body>
 
 
 <div data-role="page">
 
+    <!--    Categories-->
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <a href="#">Frozen food</a>
+            <a href="#">Pharmacy</a>
+            <a onclick="window.location.href='Products.html'">Grocery</a>
+            <a href="#">Household</a>
+            <a href="#">Liqour</a>
+            <a href="#">Beverages</a>
+            <a href="#">Homeware</a>
+            <a href="#">chilled</a>
+            <a href="#">Vegitables</a>
+            <a href="#">Meat</a>
+            <a href="#">Fish</a>
+            <a href="#">Fruits</a>
+        </div>
+    </div>
     <!-- Top Navigation -->
+
     <div data-role="header" id="top_navigation" data-position="fixed">
-        <i class="fas fa-th" id="category_icon"></i>
+        <i class="fas fa-th" id="category_icon" onclick="openNav()"></i>
         <div align="center" class="logo">
             <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
             <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
@@ -112,6 +132,8 @@
                             </td>
                     </table>
                     <button class="btn info" id="addtocart-btn">Add To Cart</button>
+                    <br>
+                    <button onclick="goBack()" class="btn warning" id="back-btn">Back</button>
                 </div>
             </div>
         </div>
