--- a/HomePage.html
+++ b/HomePage.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="Style/homepage_style.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -10,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <script src="JavaScript/functions.js" async></script>
@@ -20,9 +23,28 @@
 
 <div data-role="page" >
 
+<!--    Categories-->
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+            <a href="#">Frozen food</a>
+            <a href="#">Pharmacy</a>
+            <a onclick="window.location.href='Products.html'">Grocery</a>
+            <a href="#">Household</a>
+            <a href="#">Liqour</a>
+            <a href="#">Beverages</a>
+            <a href="#">Homeware</a>
+            <a href="#">chilled</a>
+            <a href="#">Vegitables</a>
+            <a href="#">Meat</a>
+            <a href="#">Fish</a>
+            <a href="#">Fruits</a>
+        </div>
+    </div>
     <!-- Top Navigation -->
+
     <div data-role="header" id="top_navigation" data-position="fixed">
-        <i class="fas fa-th" id="category_icon"></i>
+        <i class="fas fa-th" id="category_icon" onclick="openNav()"></i>
         <div align="center" class="logo">
             <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
             <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
@@ -198,170 +220,127 @@
     </div>
     </div>
 
-    <!-- Promotion overview card sliders -->
-    <div class="container-fluid"  style="background-color: lightgrey"  >
-        <br><br>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner row w-100 mx-auto">
-                <div class="carousel-item col-md-4 active">
-                    <div class="card">
-                        <img class="card-img-top img-fluid" src="images/food.jpg" alt="Food image">
-                        <div class="card-body">
-                            <h4 class="card-title">Healthy Food</h4>
-                            <p class="card-text">This is a longer card with supporting text below as a natural
-                                lead-in to additional content.</p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item col-md-4">
-                    <div class="card">
-                        <img class="card-img-top img-fluid" src="images/cosmetics.jpeg" alt="Cosmetics image">
-                        <div class="card-body">
-                            <h4 class="card-title">Cosmetics</h4>
-                            <p class="card-text">This is a longer card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item col-md-4">
-                    <div class="card">
-                        <img class="card-img-top img-fluid" src="images/medicine.jpeg" alt="Medicine image">
-                        <div class="card-body">
-                            <h4 class="card-title">Medicine</h4>
-                            <p class="card-text">This is a longer card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item col-md-4">
-                    <div class="card">
-                        <img class="card-img-top img-fluid" src="images/electrical.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h4 class="card-title">Electronics</h4>
-                            <p class="card-text">This is a longer card with supporting text below as a natural
-                                lead-in to additional content.</p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+    <!-- Grid -->
+    <div class="w3-row w3-container">
+        <div data-role="main" class="ui-content">
+            <p id="services_title"><b> WHAT WE OFFER </b></p>
         </div>
-        <br><br>
+        <div class="w3-col l3 m6 w3-light-blue w3-container w3-padding-16" style="color: #384aeb">
+            <h3>Qulity Prodcuts</h3>
+            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        </div>
+
+        <div class="w3-col l3 m6 w3-orange w3-container w3-padding-16">
+            <h3>The Best Prices</h3>
+            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        </div>
+
+        <div class="w3-col l3 m6 w3-dark-grey w3-container w3-padding-16">
+            <h3>Customer Satisfaction</h3>
+            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        </div>
+
+        <div class="w3-col l3 m6 w3-black w3-container w3-padding-16">
+            <h3>The Best Promotions</h3>
+            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        </div>
     </div>
 
-    <!--Items Tab view-->
-    <div data-role="tabs"  >
-        <br>
-        <div data-role="navbar" class="item-tabs">
-            <ul>
-                <li ><a href="#one" data-ajax="false">Most Popular</a></li>
-                <li><a href="#two" data-ajax="false">New Arrivals</a></li>
-                <li><a href="#three" data-ajax="false">Our promotions</a></li>
-            </ul>
-        </div>
-        <div id="one" class="ui-body-d ui-content">
+<!--    &lt;!&ndash;Items Tab view&ndash;&gt;-->
+<!--    <div data-role="tabs"  >-->
+<!--        <br>-->
+
+<!--        <div data-role="navbar" class="item-tabs">-->
+<!--            <ul>-->
+<!--                <li ><a href="#one" data-ajax="false">On Demand</a></li>-->
+<!--                <li><a href="#two" data-ajax="false">New Arrivals</a></li>-->
+<!--                <li><a href="#three" data-ajax="false">Promo Items</a></li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--        <div id="one" class="ui-body-d ui-content">-->
 
 
-            <div class="widget">
-                <ul class="widget-list" id="most-popular">
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">
-                            Manager #1 <span>481 followers</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">
-                            Manager #2 <span>5162 followers</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">
-                            Manager #3 <span>342 followers</span>
-                        </a>
-                    </li>
-                </ul>
+<!--            <div class="widget">-->
+<!--                <ul class="widget-list" id="most-popular">-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="images/milk.jpeg" class="imgpromo">-->
+<!--                            Anchor 5kg Milk Powder-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon" style="width: 100px">-->
+<!--                            Manager #2 <span>5162 followers</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">-->
+<!--                            Manager #3 <span>342 followers</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                </ul>-->
 
-            </div>
-        </div>
+<!--            </div>-->
+<!--        </div>-->
 
-        <div id="two" class="ui-body-d ui-content">
-
-
-            <div class="widget">
-                <ul class="widget-list" id="new-arrivals">
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">
-                            Designer #1 <span>481 followers</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">
-                            Designer #2 <span>5162 followers</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">
-                            Designer #3 <span>342 followers</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div id="three" class="ui-body-d ui-content">
+<!--        <div id="two" class="ui-body-d ui-content">-->
 
 
-            <div class="widget">
-                <ul class="widget-list" id="promos">
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">
-                            Manager #1 <span>481 followers</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">
-                            Manager #2 <span>5162 followers</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">
-                            Manager #3 <span>342 followers</span>
-                        </a>
-                    </li>
-                </ul>
+<!--            <div class="widget">-->
+<!--                <ul class="widget-list" id="new-arrivals">-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">-->
+<!--                            Designer #1 <span>481 followers</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">-->
+<!--                            Designer #2 <span>5162 followers</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="http://www.gravatar.com/avatar/5?f=y&amp;s=64&amp;d=identicon">-->
+<!--                            Designer #3 <span>342 followers</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div id="three" class="ui-body-d ui-content">-->
 
-            </div>
-        </div>
+
+<!--            <div class="widget">-->
+<!--                <ul class="widget-list" id="promos">-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">-->
+<!--                            Manager #1 <span>481 followers</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">-->
+<!--                            Manager #2 <span>5162 followers</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a class="widget-list-link">-->
+<!--                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">-->
+<!--                            Manager #3 <span>342 followers</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+
+<!--            </div>-->
+<!--        </div>-->
 
 
-    </div>
+<!--    </div>-->
 
     <!-- Bottom Navigation -->
     <div data-role="footer" style="text-align:center;" data-position="fixed">
@@ -377,7 +356,7 @@
                     <i class="fas fa-home" onclick="window.location.href='HomePage.html'"></i>
                 </li>
                 <li id="user_icon" style="width:20%">
-                    <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
+                    <i class="fas fa-user" onclick="window.location.href='Login.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
                     <i class="fas fa-ellipsis-v"></i>
