--- a/Login.html
+++ b/Login.html
@@ -17,7 +17,7 @@
 <body>
 <div data-role="page" id="pageone">
     <div align="center" class="header">
-        <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60">
+        <img class="logo" src="sss/images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">
     </div>
     <!--Top Banner-->
     <div class="banner">
@@ -58,12 +58,14 @@
 							</div>
 							<div class="col-md-12 form-group">
 								<div class="creat_account">
-									<input type="checkbox" id="f-option2" name="selector">
-									<label for="f-option2">Keep me logged in</label>
+<!--									<input type="checkbox" id="f-option2" name="selector">-->
+<!--									<label for="f-option2">Keep me logged in</label>-->
+                                    <label for="f-option2" id="pickup-label">Keep me Logged in</label>
+                                    <input type="checkbox" name="loggedIn" id="f-option2" value="loggedIn">
 								</div>
 							</div>
 							<div class="col-md-12 form-group">
-								<button type="submit" value="submit" class="button button-login w-100">Log In</button>
+								<button type="submit" value="submit" class="button button-login w-100" id="login">Log In</button>
 								<a href="#">Forgot Password?</a>
 							</div>
 						</form>
