--- a/sss/game.html
+++ b/sss/game.html
@@ -10,6 +10,8 @@ canvas {
 </style>
 </head>
 <body onload="startGame()">
+
+
 <script>
 
 var myGamePiece;
@@ -129,9 +131,36 @@ function accelerate(n) {
     myGamePiece.gravity = n;
 }
 </script>
+
 <br>
 <button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">ACCELERATE</button>
 <p>Use the ACCELERATE button to stay in the air</p>
 <p>How long can you stay alive?</p>
+
+
+
+<div data-role="footer"  data-position="fixed">
+    <div data-role="navbar" id="bottom_nav">
+        <ul>
+            <li id="qrcode_icon" style="width:20%">
+                <i class="fas fa-qrcode"></i>
+            </li>
+            <li id="cart_icon" style="width:20% ">
+                <i class="fas fa-shopping-cart"></i>
+            </li>
+            <li id="home_icon" style="width:20%">
+                <i class="fas fa-home"></i>
+            </li>
+            <li id="user_icon" style="width:20%">
+                <i class="fas fa-user"></i>
+            </li>
+            <li id="other_icon" style="width:20%">
+                <i class="fas fa-ellipsis-v"></i>
+            </li>
+
+        </ul>
+    </div>
+</div>
+
 </body>
 </html>
