Cart Page, Wish list, Email changes

--- a/HomePage.html
+++ b/HomePage.html
@@ -297,7 +297,7 @@
                     </li>
                     <li>
                         <a class="widget-list-link">
-                            <img src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">
+                            <img class="logo_shopmo"src="http://www.gravatar.com/avatar/47?f=y&amp;s=64&amp;d=identicon">
                             Manager #3 <span>342 followers</span>
                         </a>
                     </li>
@@ -380,7 +380,7 @@
                     <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
-                    <i class="fas fa-ellipsis-v"></i>
+                    <i class="fas fa-heart heart-button" onclick="window.location.href='WishListPage.html'"></i>
                 </li>
 
             </ul>
