--- a/CartPage.html
+++ b/CartPage.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <script src="JavaScript/functions.js" async></script>
+    <script src="JavaScript/products.js" async></script>
 
 <body>
 
@@ -40,32 +40,34 @@
     </div>
 
     <!--Main content-->
-    <div data-role="main" class="ui-content" style="text-align: center;">
+    <div data-role="main" class="ui-content">
         <p id="cart-title"><b>Shopping Cart</b></p>
 
-        <div class="card c1" id="c1">
-            <table>
-                <col width="80">
-                <col width="80">
-                <col width="80">
-                <tr>
-                    <td class="product-image-td">
-                        <img class="img" src="images/rice.jpg" alt="Rice" style="width:100%">
-                    </td>
-                    <td class="product-data-td">
-                        <p class="product-title"><b>Rice </b></p>
-                        <p class="product-price">LKR 500</p>
-                        <!--<p id="product-desc"><b>400g </b></p>-->
-                    </td>
+        <div class="cart-items">
+        <!--<div class="card c1">-->
+            <!--<table>-->
+                <!--<col width="80">-->
+                <!--<col width="80">-->
+                <!--<col width="80">-->
+                <!--<tr>-->
+                    <!--<td class="product-image-td">-->
+                        <!--<img class="img" src="images/rice.jpg" alt="Rice" style="width:100%">-->
+                    <!--</td>-->
+                    <!--<td class="product-data-td">-->
+                        <!--<p class="product-title"><b>Rice </b></p>-->
+                        <!--<p class="product-price">LKR 500</p>-->
+                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
+                    <!--</td>-->
 
-                    <td class="product-extra-td">
-                        <i class="fa fa-trash del" id="deletebtn1"></i>
-                        <p class="product-qty"> Quantity: 1 </p>
-                    </td>
-                    </td>
-                </tr>
-            </table>
-        </div>
+                    <!--<td class="product-extra-td">-->
+                        <!--&lt;!&ndash;<button type="button" class="del-item-button">click me</button>&ndash;&gt;-->
+                        <!--<i class="fa fa-trash delete-item-button" id="deletebtn1"></i>-->
+                        <!--<p class="product-qty"> Quantity: 1 </p>-->
+                    <!--</td>-->
+                    <!--</td>-->
+                <!--</tr>-->
+            <!--</table>-->
+        <!--</div>-->
 
         <!--<div class="card c2">-->
             <!--<table>-->
@@ -146,9 +148,9 @@
 
 
                     <td id="values">
-                        <p>LKR 1900 </p>
-                        <p>LKR 200</p>
-                        <p>0</p>
+                        <p class="sub-total">LKR 0 </p>
+                        <p class="code_discount">LKR 0</p>
+                        <p class="point_discount">0</p>
                     </td>
                 </tr>
                 <br>
@@ -157,7 +159,7 @@
                         <p>Total </p>
                     </td>
                     <td>
-                        <p>LKR 1700 </p>
+                        <p class="final-total">LKR 0 </p>
                     </td>
 
                 </tr>
@@ -185,7 +187,7 @@
                     <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
-                    <i class="fas fa-ellipsis-v"></i>
+                    <i class="fas fa-heart heart-button" onclick="window.location.href='WishListPage.html'"></i>
                 </li>
 
             </ul>
