--- a/EmptyCartPage.html
+++ b/EmptyCartPage.html
@@ -66,7 +66,7 @@
                     <i class="fas fa-user"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
-                    <i class="fas fa-ellipsis-v"></i>
+                    <i class="fas fa-heart heart-button" onclick="window.location.href='WishListPage.html'"></i>
                 </li>
 
             </ul>
