--- a/WishListPage.html
+++ b/WishListPage.html
@@ -13,6 +13,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="JavaScript/favourites.js" async></script>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
 </head>
 <body>
 
@@ -44,106 +47,110 @@
     <!--Main content-->
     <div data-role="main" class="ui-content">
         <p id="cart-title"><b>Wish List</b></p>
+        <div class="fav-items">
 
-        <div class="card c1">
-            <table>
-                <col width="80">
-                <col width="100">
-                <col width="60">
-                <tr>
-                    <td class="product-image-td">
-                        <img src="images/rice.jpg" alt="Rice" style="width:100%">
-                    </td>
-                    <td class="product-data-td">
-                        <p class="product-title"><b>Rice </b></p>
-                        <p class="product-price">LKR 500</p>
-                        <div class="star-rating">
+        <!--<div class="card c1">-->
+            <!--<table>-->
+                <!--<col width="80">-->
+                <!--<col width="100">-->
+                <!--<col width="60">-->
+                <!--<tr>-->
+                    <!--<td class="product-image-td">-->
+                        <!--<img src="images/rice.jpg" alt="Rice" style="width:100%">-->
+                    <!--</td>-->
+                    <!--<td class="product-data-td">-->
+                        <!--<p class="product-title"><b>Rice </b></p>-->
+                        <!--<p class="product-price">LKR 500</p>-->
+                        <!--<div class="star-rating">-->
 
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <!--<p id="product-desc"><b>400g </b></p>-->
-                    </td>
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star unchecked"></span>-->
+                            <!--<span class="fa fa-star unchecked"></span>-->
+                        <!--</div>-->
+                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
+                    <!--</td>-->
 
-                    <td class="wishlist-icons">
-                        <div class="card_area">
-                            <a id="heart_btn1" href="#"><i class="fas fa-heart fa-2x"></i></a>
-                        </div>
+                    <!--<td class="wishlist-icons">-->
+                        <!--<div class="card_area">-->
+                            <!--<a id="heart_btn1" href="#"><i class="fas fa-heart fa-2x"></i></a>-->
+                        <!--</div>-->
 
-                    </td>
-                    </td>
-                </tr>
-            </table>
+                    <!--</td>-->
+                    <!--</td>-->
+                <!--</tr>-->
+            <!--</table>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--<div class="card c2">-->
+            <!--<table>-->
+                <!--<col width="80">-->
+                <!--<col width="100">-->
+                <!--<col width="60">-->
+                <!--<tr>-->
+                    <!--<td class="product-image-td">-->
+                        <!--<img src="images/kitkat.jpg" alt="KitKat" style="width:100%">-->
+                    <!--</td>-->
+                    <!--<td class="product-data-td">-->
+                        <!--<p class="product-title"><b>KitKat </b></p>-->
+                        <!--<p class="product-price">LKR 600</p>-->
+
+                        <!--<div class="star-rating">-->
+
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star checked"></span>-->
+                        <!--</div>-->
+                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
+                    <!--</td>-->
+
+                    <!--<td class="wishlist-icons">-->
+                        <!--<div class="card_area">-->
+                            <!--<a id="heart_btn2" href="#"><i class="fas fa-heart fa-2x"></i></a>-->
+                        <!--</div>-->
+                    <!--</td>-->
+                <!--</tr>-->
+            <!--</table>-->
+        <!--</div>-->
+
+        <!--<div class="card c3">-->
+            <!--<table>-->
+                <!--<col width="80">-->
+                <!--<col width="100">-->
+                <!--<col width="60">-->
+                <!--<tr>-->
+                    <!--<td class="product-image-td">-->
+                        <!--<img src="images/milk.jpeg" alt="Milk" style="width:100%">-->
+                    <!--</td>-->
+                    <!--<td class="product-data-td">-->
+                        <!--<p class="product-title"><b>Milk </b></p>-->
+                        <!--<p class="product-price">LKR 800</p>-->
+
+                        <!--<div class="star-rating">-->
+
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star checked"></span>-->
+                            <!--<span class="fa fa-star unchecked"></span>-->
+                            <!--<span class="fa fa-star unchecked"></span>-->
+                            <!--<span class="fa fa-star unchecked"></span>-->
+                        <!--</div>-->
+                        <!--&lt;!&ndash;<p id="product-desc"><b>400g </b></p>&ndash;&gt;-->
+                    <!--</td>-->
+
+                    <!--<td class="wishlist-icons">-->
+                        <!--<div class="card_area">-->
+                            <!--<a id="heart_btn3" href="#"><i class="fas fa-heart fa-2x"></i></a>-->
+                        <!--</div>-->
+                    <!--</td>-->
+                <!--</tr>-->
+            <!--</table>-->
+
         </div>
-
-        <div class="card c2">
-            <table>
-                <col width="80">
-                <col width="100">
-                <col width="60">
-                <tr>
-                    <td class="product-image-td">
-                        <img src="images/kitkat.jpg" alt="KitKat" style="width:100%">
-                    </td>
-                    <td class="product-data-td">
-                        <p class="product-title"><b>KitKat </b></p>
-                        <p class="product-price">LKR 600</p>
-
-                        <div class="star-rating">
-
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                        </div>
-                        <!--<p id="product-desc"><b>400g </b></p>-->
-                    </td>
-
-                    <td class="wishlist-icons">
-                        <div class="card_area">
-                            <a id="heart_btn2" href="#"><i class="fas fa-heart fa-2x"></i></a>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-
-        <div class="card c3">
-            <table>
-                <col width="80">
-                <col width="100">
-                <col width="60">
-                <tr>
-                    <td class="product-image-td">
-                        <img src="images/milk.jpeg" alt="Milk" style="width:100%">
-                    </td>
-                    <td class="product-data-td">
-                        <p class="product-title"><b>Milk </b></p>
-                        <p class="product-price">LKR 800</p>
-
-                        <div class="star-rating">
-
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star checked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                            <span class="fa fa-star unchecked"></span>
-                        </div>
-                        <!--<p id="product-desc"><b>400g </b></p>-->
-                    </td>
-
-                    <td class="wishlist-icons">
-                        <div class="card_area">
-                            <a id="heart_btn3" href="#"><i class="fas fa-heart fa-2x"></i></a>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-
+        <div>
+            <button id="share-fav-list">Email Favourites</button>
         </div>
     </div>
     <!-- Bottom Navigation -->
@@ -163,7 +170,7 @@
                     <i class="fas fa-user" onclick="window.location.href='MyAccountPage.html'"></i>
                 </li>
                 <li id="other_icon" style="width:20%">
-                    <i class="fas fa-ellipsis-v"></i>
+                    <i class="fas fa-heart heart-button" onclick="window.location.href='WishListPage.html'"></i>
                 </li>
 
             </ul>
