--- a/CartPage.html
+++ b/CartPage.html
@@ -166,9 +166,11 @@
             </table>
 
         </div>
+        <div class="main-buttons">
         <button class="btn info" id="back-btn">Continue Shopping</button>
         <br>
         <button onclick="goBack()" class="btn warning" id="payment-btn">Back</button>
+        </div>
     </div>
     <!-- Bottom Navigation -->
     <div data-role="footer" style="text-align:center;" data-position="fixed">
